[project]
name = "iso8601"
version = "2.1.0"
requires-python = ">=3.9"
description = "Simple module to parse ISO 8601 dates"
authors = [{name="Michael Twomey", email="mick@twomeylee.name"}]
license = {text="MIT"}
readme = "README.rst"

[project.urls]
homepage = "https://github.com/micktwomey/pyiso8601"
repository = "https://github.com/micktwomey/pyiso8601"
documentation = "https://pyiso8601.readthedocs.io/en/latest/"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pytest = "*"
hypothesis = "*"
pytz = "*"
pre-commit = "*"
Sphinx = "*"
changelog-manager = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = """\
  (?x)(
    ^.venv
    | ^.direnv
    | ^.devenv
  )
"""
